# ConstructoXR_robot

./: .gitignore  README.md
demo_map_model/: check_stl_size.py  model.config  model.sdf
demo_map_model/meshes/: demo_model.stl
tutorial/: navigate_simulation.md
xrrover/action_test/: CMakeLists.txt  package.xml
xrrover/action_test/src/: xrrover_nav.py
xrrover/xrrover_backend/: CMakeLists.txt  package.xml
xrrover/xrrover_backend/bim/: schedule copy.csv  schedule.csv
xrrover/xrrover_backend/launch/: xrrover_4Dbim.launch
xrrover/xrrover_backend/msg/: Schedule.msg  Schedules.msg
xrrover/xrrover_backend/src/: bimtoros.py  show_current_helper.py  spacecheck.py  testspin.py
xrrover/xrrover_bringup/: CMakeLists.txt  README.md  package.xml
xrrover/xrrover_bringup/launch/: xrrover_demo.launch  xrrover_model.launch  xrrover_remote.launch  xrrover_view_model.launch
xrrover/xrrover_bringup/launch/includes/: description.launch.xml
xrrover/xrrover_description/: CMakeLists.txt  README.md  package.xml
xrrover/xrrover_description/rviz/: xrrover.rviz
xrrover/xrrover_description/urdf/: xrrover.urdf.xacro
xrrover/xrrover_description/urdf/base/: rover_base.urdf.xacro
xrrover/xrrover_description/urdf/gazebo/: rover_gazebo.xacro
xrrover/xrrover_description/urdf/laser/: rover_laser.urdf.xacro
xrrover/xrrover_description/urdf/wheels/: rover_wheel.urdf.xacro
xrrover/xrrover_description/worlds/: demo_world.world
xrrover_function/xrrover_controller/: CMakeLists.txt  README.md  package.xml
xrrover_function/xrrover_controller/launch/: loadRoverParam.launch  mecanum_core.launch  xrrover_mecanum.launch
xrrover_function/xrrover_controller/param/: rover.yaml
xrrover_function/xrrover_controller/scripts/: mecanum_core.py.bak  mecanum_core_v0.py
xrrover_function/xrrover_fusing/: CMakeLists.txt  package.xml
xrrover_function/xrrover_fusing/launch/: ekf_localization.launch
xrrover_function/xrrover_fusing/param/: ekf_robot_localization.yaml
xrrover_function/xrrover_navigation/: CMakeLists.txt  README.md  check_map_size.py  package.xml
xrrover_function/xrrover_navigation/launch/: amcl.launch  move_base.launch  xrrover_navigation.launch
xrrover_function/xrrover_navigation/maps/: lab_map.yaml  labs_map.yaml  output.yaml  xrlab_map.yaml
xrrover_function/xrrover_navigation/param/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params_xrrover.yaml  dwa_local_planner_params_xrrover.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
xrrover_function/xrrover_navigation/rviz/: xrrover_navigation.rviz
xrrover_function/xrrover_simulation/: CMakeLists.txt  README.md  package.xml
xrrover_function/xrrover_simulation/launch/: load_all_in_one.launch  xrrover_sim.launch
xrrover_hardware/xrrover_connector/: CMakeLists.txt  README.md  package.xml
xrrover_hardware/xrrover_imu/: CMakeLists.txt  README.md  package.xml
xrrover_hardware/xrrover_imu/launch/: display_and_imu.launch  rviz_and_imu.launch  test_imu.launch  view_display .launch  view_rviz.launch  xrrover_imu_connector.launch
xrrover_hardware/xrrover_imu/scripts/: hfi_a9_ros.py
xrrover_hardware/xrrover_imu/tutorials/imu_user_manual/03_基礎教程/02_Python驅動測試/: doc.md
xrrover_hardware/xrrover_lidar/: CMakeLists.txt  package.xml
xrrover_hardware/xrrover_lidar/launch/: rplidar.launch  test_rplidar.launch  view_rplidar.launch  xrrover_lidar.launch
xrrover_hardware/xrrover_lidar/param/: rplidarA2.yaml
xrrover_hardware/xrrover_motor/: CMakeLists.txt  package.xml
xrrover_hardware/xrrover_motor/launch/: README.md  mecanum_core.launch  rover_param.launch  xrrover_mecanum.launch  xrrover_motor.launch  xrrover_motor_connector.launch  xrrover_motor_controller.launch
xrrover_hardware/xrrover_motor/param/: mecanum_core.yaml
xrrover_hardware/xrrover_motor/scripts/: mecanum_core.py  mecanum_core_v1.py  mecanum_inverse copy 2.py  mecanum_inverse copy.py  mecanum_inverse.py  test.py
xrrover_unity/launch/: endpoint.launch
