<?xml version="1.0"?>
<package>
  <name>xrrover_imu</name>
  <version>0.1.0</version>
  <description>The handsfree_ros_imu package</description>

  <author email="Jerryhuang19628@gmail.com">Jerry</author>
  <maintainer email="Jerryhuang19628@gmail.com">Jerry</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
